Added couple of fields for validation of user, but not being used right now.
